[FIX] removed the flex-wrap of FilActualite.css of ArticleLink

--- a/frontend/src/pages/FilActualite/FilActualite.css
+++ b/frontend/src/pages/FilActualite/FilActualite.css
@@ -41,7 +41,6 @@
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
     transition: background-color 0.2s;
     cursor: pointer;
-    flex-wrap: wrap;
 }
 
 .ArticleLink:hover {
